--- a/css/admin.css
+++ b/css/admin.css
@@ -6,8 +6,16 @@
   top: 32px !important;
 }
 
+.custom_field_price {
+  display: inline-block;
+  width: 100%;
+}
+
+
 @media screen and (max-width: 768px) {
   .header {
     top: 46px !important;
   }
 }
+
+
