--- a/style.css
+++ b/style.css
@@ -620,7 +620,6 @@ nav.woocommerce-breadcrumb a:hover {
 .single-product .kidimat-add-to-cart-btn button,
 .single-product .single_add_to_cart_button {
   font-size: 1.125rem;
-  width: 100%;
   min-height: 3.5rem;
   min-width: 3.5rem;
   padding: 0.25rem 2rem;
@@ -645,6 +644,11 @@ nav.woocommerce-breadcrumb a:hover {
   cursor: pointer;
   outline: none;
   border: none;
+}
+
+.woocommerce table.shop_table td .quantity button:hover{
+  opacity: 0.8;
+  transform: scale(1.1);
 }
 
 .woocommerce table.shop_table td .quantity input {
@@ -848,7 +852,7 @@ ul.products .starwrapper {
   width: 50%;
 }
 
-.locations .contact-box .wpcf7 .required {
+form .required {
   color: red;
 }
 
@@ -960,6 +964,7 @@ ul.products .starwrapper {
 **********************************/
 .account-page .woocommerce {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .account-page .woocommerce nav.woocommerce-MyAccount-navigation {
@@ -1008,9 +1013,56 @@ ul.products .starwrapper {
   outline: none;
 }
 
-#tab-container.retail #company-field,
-#tab-container.retail #code_NAF_field {
-  display: none;
+#tab-pro form {
+  border: 1px solid #d3ced2;
+  padding: 20px;
+  text-align: left;
+  border-radius: 5px;
+}
+
+#tab-pro form p {
+  margin: 0 0 6px;
+}
+
+#tab-pro form label {
+  text-transform: uppercase;
+  line-height: 2;
+}
+
+#tab-pro form p:nth-child(2),
+#tab-pro form p:nth-child(3) {
+  width: 47%;
+}
+#tab-pro form p:nth-child(2) {
+  float: left;
+}
+
+#tab-pro form p:nth-child(3) {
+  float: right;
+}
+
+#tab-pro form input[type="email"],
+#tab-pro form input[type="tel"],
+#tab-pro form input[type="text"] {
+  width: 100%;
+  padding: 5px;
+  box-sizing: border-box;
+}
+
+#tab-pro form input[type="submit"] {
+  font-size: 100%;
+  margin-top: 1rem;
+  cursor: pointer;
+  padding: 0.618em 1em;
+  font-weight: 700;
+  color: #515151;
+  border: 0;
+}
+
+#tab-pro form input[type="submit"]:hover,
+.woocommerce button.button:hover {
+  background-color: var(--blue-kidimat);
+  color: #fff;
 }
 
 .form-contact p {
@@ -1034,6 +1086,7 @@ ul.products .starwrapper {
 
 .form-contact .wpcf7 .required {
   color: red;
+  font-weight: 700;
 }
 
 .form-contact .wpcf7 input {
@@ -1276,4 +1329,10 @@ ul.products .starwrapper {
   .form-contact h4 {
     font-size: 2rem;
   }
+}
+
+
+.custom_field_price {
+  display: inline-block;
+  width: 100%;
 }
